--- a/Website Music Store/music.html
+++ b/Website Music Store/music.html
@@ -75,8 +75,8 @@
         </div>
         <hr>
         <div class="about row center padding-32">
-            <h1 class="ms-color">Trnding Songs</h1>
-            <img src="img/banner.png" alt="Me" class="w3-image">
+            <h1 class="ms-color">Trending Songs</h1>
+            <img src="img/z5440428603746_48d7ca6aaaa281f36f1ff9abc2946220.jpg" alt="Me" class="w3-image">
             <div class="padding-32">
                 <h4>Record Breaking Albums !!!</h4>
                 <h6><i>With All Passion For Riel</i></h6>
