--- a/Yolo Kitchen/yolokitchen.html
+++ b/Yolo Kitchen/yolokitchen.html
@@ -41,7 +41,7 @@
                     <h2>Sauce Masterclass</h2>
                     <h3>One day workshop</h3>
                 </hgroup>
-                <p>An intensive one-day couse to hav your crush heart</p>
+                <p>An intensive one-day couse to hav your heart of the one you luv, literally</p>
             </article>
         </section>
         <aside>
