--- a/bai thi cuoi ki/baithicuoiki.html
+++ b/bai thi cuoi ki/baithicuoiki.html
@@ -34,10 +34,7 @@
                     <label for="female">Female</label>
                 </form>
             </div>
-            <div class="Address">
-                <label for="address"></label><br>
-                <input type="text" id="address" placeholder="Address" size="80">
-            </div>
+            <textarea id="address" name="address" placeholder="Address"></textarea>
             <div class="next">
                 <a href="#">Next</a>
             </div>
